# CrunchBench

./: .cursorrules  .gitignore  evaluation.py  generate_eval_dataset.py  judges.py  llms.py  models.py  preprocess.py  pyproject.toml  questions.md  quick.ipynb  readme.md  run.ipynb  utils.py  visualize.py
config/: models.py  questions.md
data/: appstore_preprocessed.csv  results.json
scripts/: 01_download_and_preprocess.py  03_run_evals.py  generate_eval_dataset.py  utils.py
